Use Address field for Place of Publication search

--- a/config-yml/views.view.elastic_search.yml
+++ b/config-yml/views.view.elastic_search.yml
@@ -3,8 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_place_of_publication
     - search_api.index.nbnp_title_index
   module:
+    - address
     - search_api
 id: elastic_search
 label: 'Elastic Search'
@@ -35,14 +37,14 @@ display:
       exposed_form:
         type: input_required
         options:
-          submit_button: Apply
+          submit_button: 'Apply Search'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
-          text_input_required: '<span class="description">Enter 1 or more keyword filters and click on Apply to see results</span>'
+          text_input_required: "<div class=\"alert alert-info fade in\">\n    <span class=\"glyphicon glyphicon-question-sign\"></span>\n    Enter 1 or more keyword filters and click on Apply to see results.\n</div>"
           text_input_required_format: full_html
       pager:
         type: mini
@@ -143,6 +145,76 @@ display:
           entity_type: null
           entity_field: null
           plugin_id: search_api_field
+        field_place_of_publication:
+          id: field_place_of_publication
+          table: search_api_datasource_nbnp_title_index_entity_node
+          field: field_place_of_publication
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: langcode
+          type: address_default
+          settings: {  }
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          field_rendering: true
+          fallback_handler: search_api
+          fallback_options:
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
+          entity_type: node
+          plugin_id: search_api_field
         search_api_excerpt:
           id: search_api_excerpt
           table: search_api_index_nbnp_title_index
@@ -187,7 +259,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: ''
+          empty: '{{ field_place_of_publication }}'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -252,7 +324,17 @@ display:
             label: ''
           plugin_id: search_api
       title: 'Elastic Search'
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: "<div class=\"alert alert-success fade in\">\n    <span class=\"glyphicon glyphicon glyphicon-ok-circle\"></span>\n    Displaying @start - @end of @total results\n</div>"
+          plugin_id: result
       footer: {  }
       empty:
         area:
@@ -263,14 +345,15 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          tokenize: false
+          tokenize: true
           content:
-            value: "<div class=\"alert alert-warning alert-dismissible fade in\">\n    <a href=\"#\" class=\"close\" data-dismiss=\"alert\">&times;</a>\n    <span class=\"glyphicon glyphicon-warning-sign\"></span>\n    <strong>Sorry!</strong> No results were found.\n</div>"
+            value: "<div class=\"alert alert-warning fade in\">\n    <span class=\"glyphicon glyphicon-warning-sign\"></span>\n    No results were found."
             format: full_html
           plugin_id: text
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      css_class: search-results
     cache_metadata:
       max-age: -1
       contexts:
@@ -278,7 +361,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_place_of_publication'
   page_1:
     display_plugin: page
     id: page_1
@@ -294,4 +378,5 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_place_of_publication'
