--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_continued_by
     - field.field.node.publication.field_continues
     - field.field.node.publication.field_credit
@@ -89,7 +90,7 @@ content:
     type: basic_string
     region: content
   field_family:
-    weight: 18
+    weight: 16
     label: above
     settings:
       link: true
@@ -115,7 +116,7 @@ content:
     type: daterange_default
     region: content
   field_first_issue_date_type:
-    weight: 23
+    weight: 20
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -145,7 +146,7 @@ content:
     type: string
     region: content
   field_is_supplementary_title:
-    weight: 20
+    weight: 18
     label: above
     settings:
       format: default
@@ -181,7 +182,7 @@ content:
     type: daterange_default
     region: content
   field_last_issue_date_type:
-    weight: 22
+    weight: 19
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -242,7 +243,7 @@ content:
     type: file_default
     region: content
   field_this_is_part_of_a_family:
-    weight: 19
+    weight: 17
     label: above
     settings:
       format: default
@@ -259,11 +260,12 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 16
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_additional_indexed_text: true
   field_credit: true
   field_first_issue_sort_date: true
   field_language: true
