NBNP-11 Switch temp date display: Default medium to HTML Date

--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -109,9 +109,9 @@ content:
     weight: 1
     label: above
     settings:
-      separator: '-'
-      format_type: medium
       timezone_override: ''
+      format_type: html_date
+      separator: '-'
     third_party_settings: {  }
     type: daterange_default
     region: content
@@ -175,9 +175,9 @@ content:
     weight: 4
     label: above
     settings:
-      separator: '-'
-      format_type: medium
       timezone_override: ''
+      format_type: html_date
+      separator: '-'
     third_party_settings: {  }
     type: daterange_default
     region: content
