NBNP-11 Extend Place of Publication country listing

--- a/config-yml/field.field.node.publication.field_place_of_publication.yml
+++ b/config-yml/field.field.node.publication.field_place_of_publication.yml
@@ -15,12 +15,33 @@ label: 'Place of Publication'
 description: ''
 required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    country_code: CA
+    langcode: null
+    administrative_area: ''
+    locality: ''
+    dependent_locality: ''
+    postal_code: ''
+    sorting_code: ''
+    address_line1: ''
+    address_line2: ''
+    organization: ''
+    given_name: ''
+    additional_name: ''
+    family_name: ''
 default_value_callback: ''
 settings:
   available_countries:
+    BS: BS
     CA: CA
-    GB: GB
+    CN: CN
+    CU: CU
+    FR: FR
+    JM: JM
+    RU: RU
+    SL: SL
+    LK: LK
     US: US
   fields:
     administrativeArea: administrativeArea
