--- a/config-yml/field.storage.node.field_last_issue_date_type.yml
+++ b/config-yml/field.storage.node.field_last_issue_date_type.yml
@@ -19,7 +19,7 @@ settings:
       label: Approximate
     -
       value: ongoing
-      label: Ongoing
+      label: 'Ongoing (still actively published)'
   allowed_values_function: ''
 module: options
 locked: false
