IN-100 Pull all upstream images when starting

--- a/dockworker.yml
+++ b/dockworker.yml
@@ -3,5 +3,8 @@ dockworker:
   instance:
     project_prefix: NBNP
     name: newspapers.lib.unb.ca
-    upstream_image: unblibraries/drupal:alpine-nginx-php7-8.x-composer
+    upstream_image:
+      - unblibraries/drupal:alpine-nginx-php7-8.x-composer
+      - mysql:5.7
+      - docker.elastic.co/elasticsearch/elasticsearch:6.2.4
   options:
