--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
@@ -1,22 +1,27 @@
 # Serial issue routing definition
 serial_issue.settings_tab:
-  route_name: serial_issue.settings
   title: 'Settings'
+  route_name: serial_issue.settings
   base_route: serial_issue.settings
 
 entity.serial_issue.canonical:
+  title: 'View'
   route_name: entity.serial_issue.canonical
   base_route: entity.serial_issue.canonical
-  title: 'View'
 
 entity.serial_issue.edit_form:
+  title: 'Edit'
   route_name: entity.serial_issue.edit_form
   base_route: entity.serial_issue.canonical
-  title: 'Edit'
 
 entity.serial_issue.delete_form:
+  title: Delete
   route_name:  entity.serial_issue.delete_form
   base_route:  entity.serial_issue.canonical
-  title: Delete
   weight: 10
 
+entity.serial_issue.pages:
+  title: 'Pages'
+  route_name: serial_issue.manage_pages
+  base_route: entity.serial_issue.canonical
+  weight: 20
