--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.info.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.info.yml
@@ -1,6 +1,10 @@
 name: Digital Serial Issue
-description: Digital Serial Issue
+description: Digital serial issue content
 package: Serials
 
 core: 8.x
 type: module
+
+dependencies:
+  - digital_serial
+  - digital_serial_page
