--- a/custom/modules/digital_serial/modules/digital_serial_page/digital_serial_page.info.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_page/digital_serial_page.info.yml
@@ -2,5 +2,8 @@ name: Digital Serial Page
 description: Digital serial page content
 package: Serials
 
-type: module
 core: 8.x
+type: module
+
+dependencies:
+  - digital_serial
