NBNP-2 Remove default Country from address field

--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -383,7 +383,7 @@ content:
   field_place_of_publication:
     weight: 3
     settings:
-      default_country: CA
+      default_country: ''
     third_party_settings: {  }
     type: address_default
     region: content
