--- a/custom/modules/digital_serial/modules/digital_serial_title/digital_serial_title.links.task.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_title/digital_serial_title.links.task.yml
@@ -20,3 +20,8 @@ entity.digital_serial_title.delete_form:
   title: Delete
   weight: 10
 
+digital_serial_title.digital_issues:
+  route_name: digital_serial_title.digital_issues
+  title: 'Digital Issues'
+  base_route: entity.node.canonical
+  weight: 100
