--- a/custom/modules/digital_serial/modules/digital_serial_title/digital_serial_title.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_title/digital_serial_title.routing.yml
@@ -2,7 +2,7 @@ digital_serial_title.digital_issues:
   path: '/node/{node}/digital_issues'
   defaults:
     _title_callback: '\Drupal\digital_serial_title\Controller\NewspaperPublicationDigitalTitleListTitleController::getDigitalListTitle'
-    _form: '\Drupal\digital_serial_title\Form\PublicationDigitalTitleListForm'
+    _controller: '\Drupal\digital_serial_title\Controller\NewspaperPublicationDigitalTabRedirect::triageRequest'
   requirements:
     _custom_access: '\Drupal\digital_serial_title\Controller\NewspaperPublicationCheckController::checkAccess'
 
