--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
@@ -25,3 +25,9 @@ entity.digital_serial_issue.pages:
   route_name: digital_serial_issue.manage_pages
   base_route: entity.digital_serial_issue.canonical
   weight: 20
+
+digital_serial_issue.title_issues:
+  route_name: digital_serial_title.title_issues
+  title: 'Issues'
+  base_route: entity.digital_serial_title.canonical
+  weight: 150
