--- a/config-yml/chosen.settings.yml
+++ b/config-yml/chosen.settings.yml
@@ -1,8 +1,8 @@
-minimum_single: 20
-minimum_multiple: 20
+minimum_single: 7
+minimum_multiple: 7
 disable_search_threshold: 0
 minimum_width: null
-jquery_selector: 'select:visible'
+jquery_selector: "select:visible,select#edit-field-serial-relation-suc-ref-dn,select#edit-field-serial-relation-suc-ref-up\r\n"
 search_contains: false
 disable_search: false
 allow_single_deselect: false
