--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -4,8 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.publication.field_continued_by
-    - field.field.node.publication.field_continues
+    - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
     - field.field.node.publication.field_family
@@ -48,8 +47,6 @@ hidden:
   field_abbreviated_title: true
   field_additional_indexed_text: true
   field_city_town: true
-  field_continued_by: true
-  field_continues: true
   field_credit: true
   field_description: true
   field_family: true
