NBNP-17 Rename route to match module

--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
@@ -20,7 +20,7 @@ entity.digital_serial_issue.canonical:
   requirements:
     _permission: 'view published serial issue entities'
 
-digital_serial_title.title_issues:
+digital_serial_issue.title_issues:
   path: '/serials/{digital_serial_title}/issues'
   defaults:
     _title_callback: '\Drupal\digital_serial_title\Controller\NewspaperPublicationDigitalTitleListTitleController::getTitleIssuesTitle'
