--- a/config-yml/chosen.settings.yml
+++ b/config-yml/chosen.settings.yml
@@ -2,7 +2,7 @@ minimum_single: 7
 minimum_multiple: 0
 disable_search_threshold: 0
 minimum_width: null
-jquery_selector: "select:visible,select#edit-field-serial-relation-suc-ref-dn,select#edit-field-serial-relation-suc-ref-up\r\n"
+jquery_selector: "select:visible,select#edit-field-serial-relation-suc-ref-dn,select#edit-field-serial-relation-suc-ref-up,select#edit-field-serial-relation-pre-ref-up,select#edit-field-serial-relation-pre-ref-dn\r\n"
 search_contains: false
 disable_search: false
 allow_single_deselect: false
