NBNP-16 Wrap Preceeding/Succeeding in expandable Relationship fieldset

--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -86,6 +86,25 @@ third_party_settings:
         required_fields: false
       label: 'Title Details'
       region: content
+    group_relationships:
+      children:
+        - field_serial_relationship_op_pre
+        - field_serial_relation_pre_ref_up
+        - field_serial_relation_pre_ref_dn
+        - field_serial_relationship_op_suc
+        - field_serial_relation_suc_ref_up
+        - field_serial_relation_suc_ref_dn
+      parent_name: ''
+      weight: 14
+      format_type: details
+      format_settings:
+        label: Relationships
+        id: ''
+        classes: ''
+        open: false
+        required_fields: false
+      label: Relationships
+      region: content
 id: node.publication.default
 targetEntityType: node
 bundle: publication
@@ -93,7 +112,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 23
+    weight: 24
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -284,7 +303,7 @@ content:
     type: string_textfield
     region: content
   field_language:
-    weight: 21
+    weight: 22
     settings:
       format:
         name: name
@@ -383,39 +402,39 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_serial_relation_pre_ref_dn:
-    weight: 16
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_serial_relation_pre_ref_up:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_serial_relation_suc_ref_dn:
-    weight: 19
+    weight: 20
     settings: {  }
     third_party_settings:
       conditional_fields: {  }
     type: options_select
     region: content
   field_serial_relation_suc_ref_up:
-    weight: 18
+    weight: 19
     settings: {  }
     third_party_settings:
       conditional_fields: {  }
     type: options_select
     region: content
   field_serial_relationship_op_pre:
-    weight: 14
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_serial_relationship_op_suc:
-    weight: 17
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -455,7 +474,7 @@ content:
     type: string_textfield
     region: content
   field_supplemental_information:
-    weight: 20
+    weight: 21
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
@@ -479,7 +498,7 @@ content:
     region: content
   path:
     type: path
-    weight: 26
+    weight: 27
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -487,21 +506,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 24
+    weight: 25
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 27
+    weight: 28
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 25
+    weight: 26
     region: content
     third_party_settings: {  }
   title:
@@ -514,7 +533,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 22
+    weight: 23
     settings:
       match_operator: CONTAINS
       size: 60
