--- a/config-yml/field.field.node.publication.field_serial_relationship_op_pre.yml
+++ b/config-yml/field.field.node.publication.field_serial_relationship_op_pre.yml
@@ -15,9 +15,7 @@ label: Precedings
 description: ''
 required: false
 translatable: false
-default_value:
-  -
-    value: separated
+default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: list_string
